--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,19 @@
 {
     "python.linting.pylintEnabled": false,
-    "python.linting.pylamaEnabled": true,
+    "python.linting.pylamaEnabled": false,
     "python.linting.enabled": true,
     "files.associations": {
-        "*.h": "c",
-        ".clang-tidy": "yaml",
-        "string_view": "c",
-        "regex": "c"
+      "*.h": "c",
+      ".clang-tidy": "yaml",
+      "string_view": "c",
+      "regex": "c",
+      "system_error": "c",
+      "array": "c",
+      "functional": "c",
+      "tuple": "c",
+      "type_traits": "c",
+      "utility": "c"
     },
     "C_Cpp.dimInactiveRegions": false,
+    "python.linting.mypyEnabled": true,
 }
