--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,66 +9,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  nano_build:
-    name: Build Hedera application for NanoS, X and S+
-    strategy:
-      matrix:
-        include:
-          - SDK: "$NANOS_SDK"
-            device: nanos
-          - SDK: "$NANOX_SDK"
-            device: nanox
-          - SDK: "$NANOSP_SDK"
-            device: nanosp
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/ledgerhq/ledger-app-builder/ledger-app-builder-lite:latest
+  build_application:
+    name: Build application using the reusable workflow
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_build.yml@v1
+    with:
+      upload_app_binaries_artifact: compiled_app_binaries
+      skip_stax: true
 
-    steps:
-      - name: Clone
-        uses: actions/checkout@v3
-
-      - name: Build
-        run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python make BOLOS_SDK=${{ matrix.SDK }}
-          cp bin/app.elf bin/hedera_${{ matrix.device }}.elf
-
-      - name: Upload app binary
-        uses: actions/upload-artifact@v3
-        with:
-          name: hedera_binaries
-          path: ./bin/hedera_${{ matrix.device }}.elf
-          if-no-files-found: error
-
-  jobs-e2e-pytest-tests:
-    name: Pytest tests
-
-    needs: [ nano_build ]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Clone
-        uses: actions/checkout@v3
-
-      - name: Download app binaries and python protobuf files
-        uses: actions/download-artifact@v3
-
-      - name: Gather artifacts
-        run: |
-          mkdir tests/elfs
-          mv *_binaries/*.elf tests/elfs
-
-      - name: Install APT dependencies
-        run: sudo apt-get update && sudo apt-get install -y qemu-user-static
-
-      - name: Install Ragger
-        run: |
-          pip install --extra-index-url https://test.pypi.org/simple/ -r tests/requirements.txt
-
-      - name: Run speculos tests
-        run: |
-          PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python pytest -v --tb=short ./tests
+  ragger_tests:
+    name: Run ragger tests using the reusable workflow
+    needs: build_application
+    uses: LedgerHQ/ledger-app-workflows/.github/workflows/reusable_ragger_tests.yml@v1
+    with:
+      download_app_binaries_artifact: compiled_app_binaries
+      test_dir: tests
+      skip_stax: true
 
   scan-build:
     name: Clang Static Analyzer
